--- a/pppppp/Base.lproj/Main.storyboard
+++ b/pppppp/Base.lproj/Main.storyboard
@@ -565,6 +565,9 @@
                                 <state key="normal" title="良い">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <action selector="goodButton" destination="9kw-x1-zJW" eventType="touchUpInside" id="z0r-Mh-nfE"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uY8-eX-Q5p">
                                 <rect key="frame" x="178" y="497" width="75" height="35"/>
@@ -574,6 +577,9 @@
                                 <state key="normal" title="普通">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <action selector="normalButton" destination="9kw-x1-zJW" eventType="touchUpInside" id="3bP-aT-w7x"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X6v-9u-yfa">
                                 <rect key="frame" x="49" y="497" width="78" height="35"/>
@@ -583,6 +589,9 @@
                                 <state key="normal" title="良くない">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <action selector="badButton" destination="9kw-x1-zJW" eventType="touchUpInside" id="cXJ-jx-MvS"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="今日の評価" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jAJ-lW-ugg">
                                 <rect key="frame" x="164" y="422" width="102" height="24"/>
